<resources>
    <string name="app_name">R.U.I</string>
    <string name="app_name_completo">Restaurante Universitario - Campus Itapajé</string>
    <string name="txt_Button_Entrar">Cardapio</string>
    <string name="txt_button_avaliar">Avaliar</string>
    <string name="des_img_comida">Prato de comida</string>
    <string name="des_img_ufc">Logo da UFC</string>
    <string name="txt_data_almoco">Data da avaliação:</string>
    <string name="txt_sugestao_almoco">Sugestão sobre o almoço:</string>
    <string name="txt_proteina_escolhida">Escolha a proteína:</string>
    <string name="btn_carne_vermelha">Carne vermelha</string>
    <string name="btn_carne_branca">Carne branca</string>
    <string name="btn_carne_vegetariana">Vegetariana</string>
    <string name="titulo_formulario">Avaliação do cardápio</string>
    <string name="formulario_av1">Proteina:</string>
    <string name="formulario_av2">Acompanhamentos:</string>
    <string name="formulario_av4">Bebida:</string>
    <string name="btn_enviar">--></string>
    <string name="bot_carne_ruim">Botão Carne Ruim</string>
    <string name="imagem_bot_o_carne_ruim">Imagem Botão Carne Ruim</string>
    <string name="bot_o_carne_neutra">Botão Carne Neutra</string>
    <string name="imagembot_ocarneneutra">Imagem Botão Carne Neutra</string>
    <string name="bot_ocarneboa">Botão Carne Boa</string>
    <string name="imagembot_ocarneboa">imagem Botão Carne Boa</string>
    <string name="boa">Boa</string>
    <string name="neutra">Neutra</string>
    <string name="ruim">Ruim</string>
    <string name="confirmar_avaliacao">Avaliação Enviada com Sucesso</string>
    <string name="email">Email:</string>
    <string name="editText">É um texto</string>
    <string name="bot_o_acompanhamento_ruim">botão acompanhamento ruim</string>
    <string name="imagem_bot_o_acompanhamento_ruim">imagem botão acompanhamento ruim</string>
    <string name="bot_o_acompanhamento_neutra">botão acompanhamento neutra</string>
    <string name="imagem_bot_o_acompanhamento_neutra">imagem botão acompanhamento neutra</string>
    <string name="bot_o_acompanhamento_bom">botão acompanhamento bom</string>
    <string name="imagem_bot_o_acompanhamento_bom">imagem botão acompanhamento bom</string>
    <string name="bot_o_bebida_ruim">botão bebida ruim</string>
    <string name="imagem_bot_o_bebida_ruim">imagem botão bebida ruim</string>
    <string name="bot_o_bebida_neutro">botão bebida neutro</string>
    <string name="imagem_bot_o_bebida_neutra">imagem botão bebida neutra</string>
    <string name="bot_o_bebida_bom">botão bebida bom</string>
    <string name="imagem_bot_o_bebida_boa">imagem botão bebida boa</string>
    <string name="cardapio_ufc_itapaje">Cardapio UFC/Itapaje</string>
    <string name="segunda">Segunda</string>
    <string name="ingredientes_1">Lasanha de carne moida, Acem Moida, Farinha de trigo, Tomate, Cebola, Pimentão, molho de tomate e sal;</string>
    <string name="acompanhamento_1">Arroz, Feijão.</string>
    <string name="proteinas_1">Carne vermelha: Feijoada\nCarne branca: Coxa e sobrecoxa\nVegetariano: Empadão de soja</string>
    <string name="lista_de_ingredientes">Lista de ingredientes:</string>
    <string name="acompanhamento">Acompanhamento</string>
    <string name="ingredientes_2">Lasanha de carne moida, Acem Moida, Farinha de trigp, Tomate, Cebola, Pimentão, molho de tomate e sal;</string>
    <string name="guarni_o">Guarnição</string>
    <string name="guarni_o_1">Farofa dourada</string>
    <string name="salada">Salada</string>
    <string name="salada_1">Vinagrete</string>
    <string name="salada_2">Jerimun e chuchu cozido</string>
    <string name="guarni_o_2">Macarrão</string>
    <string name="proteinas_2">Carne vermelha: Cozidão bovino\nCarne branca: Frango em cubos com calabresa\nVegetariano: Almôndega de batata com lentinha</string>
    <string name="ter_a">Terça</string>
    <string name="desc_button2">Isto é a porra de um botão para passar a tela</string>
    <string name="uma_salada_de_frutas">Uma Salada de Frutas</string>


</resources>