<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/GradientAzulFormulario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaCardapio">

    <TextView
        android:id="@+id/guarni_o"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/guarni_o"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lista" />

    <TextView
        android:id="@+id/acompanhamentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/acompanhamento"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/proteinaDisponivel" />

    <TextView
        android:id="@+id/proteinaDisponivel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/proteinas_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/diaDaSemana" />

    <View
        android:id="@+id/ContainerTop"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ImgLogoUFC"
        android:layout_width="100dp"
        android:layout_height="105dp"
        android:contentDescription="@string/des_img_ufc"
        android:src="@drawable/logo_ufc"
        app:layout_constraintEnd_toEndOf="@+id/ContainerTop"
        app:layout_constraintStart_toStartOf="@+id/ContainerTop"
        app:layout_constraintTop_toTopOf="@+id/ContainerTop" />

    <TextView
        android:id="@+id/cardapio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/cardapio_ufc_itapaje"
        app:layout_constraintBottom_toTopOf="@+id/feijoada"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ContainerTop" />

    <ImageView
        android:id="@+id/feijoada"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_marginTop="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/salada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardapio" />

    <TextView
        android:id="@+id/diaDaSemana"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/ter_a"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feijoada"
        tools:layout_editor_absoluteX="144dp" />

    <TextView
        android:id="@+id/lista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:text="@string/acompanhamento_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/acompanhamentos" />

    <TextView
        android:id="@+id/guarni_o1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:text="@string/guarni_o_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guarni_o" />

    <TextView
        android:id="@+id/salada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/salada"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guarni_o1" />

    <TextView
        android:id="@+id/salada_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:text="@string/salada_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/salada" />

    <ImageButton
        android:id="@+id/button1"
        android:layout_width="62dp"
        android:layout_height="39dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_btn_back"
        android:textColorLink="#BC3030"
        app:layout_constraintBottom_toBottomOf="@id/feijoada"
        app:layout_constraintLeft_toLeftOf="@id/feijoada"
        app:layout_constraintTop_toTopOf="@id/feijoada" />

</androidx.constraintlayout.widget.ConstraintLayout>

