<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".TelaFormulario">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titulo_formulario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/titulo_formulario"
        android:textSize="28sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/DataAvaliacao"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/titulo_formulario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/txt_data_almoco"
        android:textSize="20sp"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"/>


    <TextView
        android:id="@+id/Sugestao"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/DataAvaliacao"
        android:text="@string/txt_sugestao_almoco"
        android:textSize="20sp"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"/>

    <EditText
        android:id="@+id/ResSugestao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Sugestao"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"/>

    <TextView
        android:id="@+id/Proteina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ResSugestao"
        android:text="@string/txt_proteina_escolhida"
        android:textSize="20sp"
        android:gravity="center"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/CarneVermelha"
        android:layout_width="120sp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Proteina"
        android:text="@string/btn_carne_vermelha"
        android:textSize="15sp"
        android:layout_marginStart="10dp"
        android:background="@color/Primaria"
        android:textColor="@color/white"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/CarneVegetariana"
        android:layout_width="120sp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Proteina"
        android:text="@string/btn_carne_vegetariana"
        android:textSize="15sp"
        android:layout_marginEnd="10dp"
        android:background="@color/Primaria"
        android:textColor="@color/white"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/CarneBranca"
        android:layout_width="120sp"
        android:layout_height="60dp"
        android:text="@string/btn_carne_branca"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/Proteina"
        app:layout_constraintStart_toEndOf="@id/CarneVermelha"
        app:layout_constraintEnd_toStartOf="@id/CarneVegetariana"
        android:background="@color/Primaria"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/bt_Enviar"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="-->"
        android:textSize="20sp"/>

    <LinearLayout
        android:id="@+id/caixa_de_pergunta"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CarneVermelha"
        android:visibility="gone"
        android:gravity="center"
        >

        <RatingBar
            android:id="@+id/ratingBar_Carne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Acompanhamentos"/>
        <RatingBar
            android:id="@+id/ratingBar_Acompanhamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Salada"/>
        <RatingBar
            android:id="@+id/ratingBar_Salada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bebida"/>
        <RatingBar
            android:id="@+id/ratingBar_Bebida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>