<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        style="@style/GradientAzul"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/ContainerTop"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo_ufc"
        app:layout_constraintEnd_toEndOf="@+id/ContainerTop"
        app:layout_constraintStart_toStartOf="@+id/ContainerTop"
        app:layout_constraintTop_toTopOf="@+id/ContainerTop"
        android:contentDescription="@string/des_img_ufc" />

    <View
        android:id="@+id/ContainerTexto"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@+id/ContainerTop"

        />

    <TextView
        android:layout_width="108dp"
        android:layout_height="74dp"
        android:layout_marginStart="20dp"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/ContainerTexto"
        app:layout_constraintTop_toTopOf="@+id/ContainerTexto" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:text="@string/app_name_completo"
        android:textSize="13sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/ContainerTexto"
        app:layout_constraintBottom_toBottomOf="@id/ContainerTexto"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/BtEntrarNutri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_Button_Entrar_Nutri"
        android:padding="15dp"
        android:background="@drawable/background_button_selector"
        android:enabled="true"
        app:layout_constraintTop_toTopOf="@id/ContainerTop"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="290dp"
        android:layout_marginEnd="10dp"
        android:textAllCaps="false"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/BtEntrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_Button_Entrar"
        android:padding="15dp"
        android:background="@drawable/background_button_selector"
        android:enabled="true"
        app:layout_constraintTop_toBottomOf="@id/ContainerTexto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textAllCaps="false"
        />


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtEntrar"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/comida"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/des_img_comida" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>